--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "fastapi>=0.116.1",
+    "pydantic>=2.11.7",
+    "requests>=2.32.4",
     "streamlit>=1.48.0",
+    "uvicorn>=0.35.0",
 ]
