--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "fastapi>=0.116.1",
+    "langchain>=0.3.27",
+    "ollama>=0.5.2",
     "pydantic>=2.11.7",
     "requests>=2.32.4",
     "streamlit>=1.48.0",
